--- a/index.html
+++ b/index.html
@@ -37,26 +37,7 @@
             <a href="" target="_blank">Follow us</a>
         </div>
     </div>
-    <header><!--SideNav-->
-        <div class="navBtn">+</div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="index.html#pillars">Services</a>
-            <a href="index.html#contact">Contact</a>
-            <hr>
-           OUR SERVICES
-            <hr>
-            <a href="social.html">Social Media Management</a>
-            <a href="marketing.html">Digital Marketing</a>
-            <a href="lead.html">Lead Generation</a>
-            <a href="webdev.html">Website Development</a>
-            <a href="backend.html">Customer Support Back-End</a>
-            <a href="frontend.html">Customer Support Front-End</a>
-        </nav>
-    </header>
-
     <div id="fullpage"><!-- Contents starts here -->
-        
         <div class="section col s12 bg "><!-- Home -->
             <div class="row center rnr-parallax1">
                 <div class="layer wrapper" data-depth="0.3">   <!-- SVG CODE -->
@@ -473,31 +454,30 @@
                         <div class="col s12" style="margin-right: 50px;margin-left: 130px;">
                             <div class="card form_holder" style="margin: 0 auto;">
                                 <div class="card-content row">
-                                    <div class="col s12 m4 l4" id='contact_bg'>
+                                    <div class="col s12 m5 l4" id='contact_bg'>
                                         <h4>Let's Talk</h4>
                                         <p class="black-text">Your Success is our success<br> Supercharge your Business Today.</p>
                                         <ul>
                                             <li class="row">
-                                                <span class="col s2"><i class="material-icons small" style="line-height: normal;">mail_outline</i></span>
-                                                <span class="col s10">info@deegeelab.com</span>
+                                                <i class="material-icons left">mail_outline</i> 
+                                                <span>info@deegeelab.com</span>
                                             </li>
                                             <li class="row">
-                                                <span class="col s2"><i class="material-icons small" style="line-height: normal;">phone</i></span>
-                                                <span class="col s10">0948 999 9988</span>
+                                                <i class="material-icons left">phone</i></span>
+                                                <span>0948 999 9988</span>
                                             </li>
                                             <li class="row">
-                                                <span class="col s2"><i class="material-icons small" style="line-height: normal;">map</i></span>
-                                                <span class="col s10">Suit 3,Level 27 GovernorMacquarrie Tower 1 Farrer Place,Sydny NSW 2000 AUSTRALIA</span>
+                                                <i class="material-icons left">map</i>
+                                                <span>Suit 3,Level 27 GovernorMacquarrie Tower 1 Farrer Place,Sydny NSW 2000 AUSTRALIA</span>
                                             </li>
                                             <li class="row">
-                                                <span class="col s2"><i class="material-icons small" style="line-height: normal;">map</i></span>
-                                                <span class="col s10">Unit 8 Viliran Compound Lingayen, Pangasinan Philippines</span>
+                                                <i class="material-icons left">map</i>
+                                                <span>Unit 8 Viliran Compound Lingayen, Pangasinan Philippines</span>
                                             </li>
                                         </ul>
                                     </div>
-                                    <div class="col s12 m8 l8 left-border">
+                                    <div class="col s12 m7 l8 left-border">
                                         <form id="form_query" method="po st" name="form_query">
-                                            <div class="row">
                                                 <div class="input-field col s12">
                                                     <input class="validate" id="field_name" name="field_name" type="text"> 
                                                     <label for="field_name">Name</label>
@@ -506,34 +486,24 @@
                                                     <input class="validate" id="field_business" name="field_business" type="text"> 
                                                     <label for="field_business">Business Name</label>
                                                 </div>
-                                            </div>
-                                            <div class="row">
                                                 <div class="input-field col s12">
                                                     <input class="validate" id="field_email" name="field_email" type="email"> 
                                                     <label for="field_email">Contact Email</label>
                                                 </div>
-                                            </div>
-                                            <div class="row">
                                                 <div class="input-field col s12">
                                                     <input class="validate" id="field_number" name="field_number" type="number"> 
                                                     <label for="field_email">Contact Number</label>
                                                 </div>
-                                            </div>
-                                            <div class="row">
                                                 <div class="input-field col s12">
                                                     <input id='field_date' type='date' id="field_date" name='field_date'>
                                                     <label for="field_date" class="active">Schedule a meeting</label>
                                                 </div>
-                                            </div>
-                                            <div class="row">
                                                 <div class="input-field col s12">
                                                     <textarea rows='5' class="validate" id="field_message" name="field_message" type="text"></textarea>
                                                     <label for="field_date">Message</label>
                                                 </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col s12">
-                                                    <button class="right btn-round rnr-button waves-effect waves-light">Send</button>
+                                                <div class="input-field col s12">
+                                                    <button class="right btn-round btn-flat waves-effect waves-light white-text">Send</button>
                                                 </div>
                                             </div>
                                         </form>
@@ -542,111 +512,50 @@
                             </div>
                         </div>
                     </div>
-                    <!-- tablet -->
-                    <!-- <div class="hide-on-small-only hide-on-large-only" id='display_tablet'>
-                        <div class="col s12" style="margin-right: 50px;margin-left: 50px">
-                            <div class="card horizontal">
-                                <div class="card-image" id='backcon'>
-                                    <div style="float: left !important; margin-left: 20px;">
-                                        <h4 style="color: white !important;">Let's Talk</h4>
-                                        <p>Your Success is our success<br>
-                                        Supercharge your Business Today.</p>
-                                        <div style="margin-left: 2em">
-                                            <div style="margin-left: 2em">
-                                                <i class="fas fa-envelope fa-2x"></i> <a href="">
-                                                <span style="color: white !important;"> info@deegeelab.com</span>
-                                                </a>
-                                            </div>
-                                            <div style="margin-left: 2em; margin-top: 20px;">
-                                                <i class="fas fa-address-card fa-2x"></i> <a href="">
-                                                <span style="color: white !important;">Suit 3,Level 27 GovernorMacquarrie Tower 1 Farrer Place,Sydny NSW 2000 AUSTRALIA.</span>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col s12 card-stacked">
-                                    <div class="card-content" style="color: black">
-                                        <form id="form_query" method="po st" name="form_query">
-                                            <div class="row">
-                                                <div class="input-field col s12">
-                                                    <input class="validate" id="field_name" name="field_name" style="color: black !important;" type="text"> <label for="field_name">Name</label>
-                                                </div>
-                                                <div class="input-field col s12">
-                                                    <input class="validate" id="field_business" name="field_business" style="color: black !important;" type="text"> <label for="field_business">Business Name</label>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="input-field col s12">
-                                                    <input class="validate" id="field_conemail" name="field_conemail" style="color: black !important;" type="email"> <label for="field_conemail">Contact Email</label>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="input-field col s12">
-                                                    <input class="validate" id="field_connumber" name="field_connumber" style="color: black !important;" type="number"> <label for="field_email">Contact Number</label>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="input-field col s12">
-                                                    <input class="validate" id="field_date" name="field_message" style="color: black !important;" type="text"> <label for="field_date">Message</label>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col s12">
-                                                    <button class="rnr-button waves-effect waves-light" style="color: black !important;">Send</button>
-                                                </div>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
-                    <!-- mobile -->
-                    <!-- <div class="hide-on-med-only hide-on-large-only" id='display_mobile'>
-                        <div class="card">
-                            <div class="row">
-                                <div class="col s12 m8 l8" style="border-left: black solid 0.5px;">
-                                    <form id="form_query" method="po st" name="form_query">
-                                        <div class="row">
-                                            <div class="input-field col s12">
-                                                <input class="validate" id="field_name" name="field_name" style="color: black !important;" type="text"> <label for="field_name">Name</label>
-                                            </div>
-                                            <div class="input-field col s12">
-                                                <input class="validate" id="field_business" name="field_business" style="color: black !important;" type="text"> <label for="field_business">Business Name</label>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="input-field col s12">
-                                                <input class="validate" id="field_conemail" name="field_conemail" style="color: black !important;" type="email"> <label for="field_conemail">Contact Email</label>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="input-field col s6">
-                                                <input class="validate" id="field_connumber" name="field_connumber" style="color: black !important;" type="number"> <label for="field_email">Contact Number</label>
-                                            </div>
-                                            <div class="input-field col s6">
-                                                <input class="validate" id="field_date" name="field_message" style="color: black !important;" type="text"> <label for="field_date">Message</label>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col s12">
-                                                <button class="rnr-button waves-effect waves-light" style="color: black !important;">Send</button>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
             </div> 
         </div>
     </div>
+    <div id="footer">
+        <div class="left">
+            <img width="60px" src="assets/images/footer/dgwhite.png">
+        </div>
+        <div class="right">
+            <ul>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of use</a></li>
+                <li><i class="material-icons left">copyright</i> <span>2017 Deegeelab</span></li>
+                <li></li>
+            </ul>
+        </div>
+    </div>
+
+    <ul class="side-nav" id="slide-out">
+        <li>
+            <div class="user-view">
+                <div class="background"></div><a href="#!user"><img class="circle" src="images/yuna.jpg"></a> <a href="#!name"><span class="white-text name">John Doe</span></a> <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
+            </div>
+        </li>
+        <li>
+            <a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a>
+        </li>
+        <li>
+            <a href="#!">Second Link</a>
+        </li>
+        <li>
+            <div class="divider"></div>
+        </li>
+        <li>
+            <a class="subheader">Subheader</a>
+        </li>
+        <li>
+            <a class="waves-effect" href="#!">Third Link With Waves</a>
+        </li>
+    </ul>
     <script src="assets/js/jquery.min.js"></script> 
     <script src="assets/js/jquery.easings.min.js"></script> 
     <script src="assets/js/jquery.sidr.min.js"></script>
-    <script src="assets/js/jquery.fullPage.js"></script> 
+    <!-- <script src="assets/js/jquery.fullPage.js"></script>  -->
     <script src="assets/js/jquery.fullpage.extensions.min.js"></script> 
     <script src="assets/js/materialize.min.js"></script> 
     <script src="assets/js/validation/jquery.validate.min.js"></script> 
