--- a/index.html
+++ b/index.html
@@ -8,35 +8,15 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
     <title>Deegeelab - Your Digital Marketing Specialist in Australia</title>
     <link href="assets/Logo/DeegeelabWhite.png" rel="icon">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
     <link href="assets/css/responsive.css" rel="stylesheet" type="text/css">
     <link href="assets/css/animate.css" rel="stylesheet" type="text/css">
     <link href="assets/css/svg.css" rel="stylesheet" type="text/css">
     <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/socialfloat.css" rel="stylesheet" type="text/css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div><!-- Floating Social Media bar Starts -->
-        <div class="fl-fl float-fb">
-            <i class="fa fa-facebook-square" aria-hidden="true"></i>
-            <a href="https://www.facebook.com/DeeGeeLabAU/" target="_blank"> Like us!</a>
-        </div>
-        <div class="fl-fl float-tw">
-            <i class="fa fa-twitter-square" aria-hidden="true"></i>
-            <a href="" target="_blank">Follow us!</a>
-        </div>
-        <div class="fl-fl float-gp">
-            <i class="fa fa-google-plus-square" aria-hidden="true"></i>
-            <a href="" target="_blank">Connect with us!</a>
-        </div>
-        <div class="fl-fl float-rs">
-            <i class="fa fa-instagram" aria-hidden="true"></i>
-            <a href="" target="_blank">Follow us</a>
-        </div>
-    </div>
     <div id="fullpage"><!-- Contents starts here -->
         <div class="section col s12 bg "><!-- Home -->
             <div class="row center rnr-parallax1">
@@ -518,14 +498,20 @@
     </div>
     <div id="footer">
         <div class="left">
-            <img width="60px" src="assets/images/footer/dgwhite.png">
+            <ul>
+                <li><img width="60px" src="assets/images/footer/dgwhite.png"></li>
+                <li><a class="grey-text" href='#'><i class="material-icons" style="line-height: unset;">copyright</i> <span class="right">2017 Deegeelab</span></a></li>
+            </ul>
         </div>
         <div class="right">
             <ul>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms of use</a></li>
-                <li><i class="material-icons left">copyright</i> <span>2017 Deegeelab</span></li>
-                <li></li>
+                <li><a href="privacy-policy.html" class="grey-text">Privacy Policy</a></li>
+                <li><a href="terms-of-use.html" class="grey-text">Terms of use</a></li>
+                <li style="top: 5px;position:  relative;">
+                    <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" class="left social-icons" src="assets/images/footer/facebook_icon.png"></a>
+                    <a href="http://localhost/deegeelab/"><img width="35px" class="left social-icons" src="assets/images/footer/instagram_icon.png"></a>
+                    <a href="http://localhost/deegeelab/"><img width="30px" class="left social-icons" src="assets/images/footer/goog_icon.png"></a>
+                </li>
             </ul>
         </div>
     </div>
@@ -555,7 +541,7 @@
     <script src="assets/js/jquery.min.js"></script> 
     <script src="assets/js/jquery.easings.min.js"></script> 
     <script src="assets/js/jquery.sidr.min.js"></script>
-    <!-- <script src="assets/js/jquery.fullPage.js"></script>  -->
+    <script src="assets/js/jquery.fullPage.js"></script> 
     <script src="assets/js/jquery.fullpage.extensions.min.js"></script> 
     <script src="assets/js/materialize.min.js"></script> 
     <script src="assets/js/validation/jquery.validate.min.js"></script> 
